# video_search

./: Dockerfile  Dockerfile.extend  LICENSE-APACHE  LICENSE-MIT  MANIFEST.in  README.rst  deploy.sh  install.sh  pyproject.toml  resync.sh  setup.py
video_search/: config.py  detect_scene.py  guniapp.py  lsisearch.py  processvideo.py  recognizeface.py  rest.py  searchcloth.py  searchface.py  searchvideo.py  server.py  similaritymatch.py  thumbnail.py  utils.py  videoapis.py
video_search/webui/: asset-manifest.json  index.html  manifest.json  service-worker.js
video_search/webui/static/css/: main.0dad52c8.css
video_search/webui/static/js/: main.9d8ac343.js
