[metadata]
name = 'video_search'
version = '0.0.1'
description = ''
author = 'Malar Invention'
author_email = 'malarkannan.invention@gmail.com'
license = 'MIT/Apache-2.0'
url = 'https://github.com/malarinv/video_search'

[requires]
python_version = ['2.7', '3.5', '3.6', 'pypy', 'pypy3']

[build-system]
requires = ['setuptools', 'wheel']

[tool.hatch.commands]
prerelease = 'hatch build'
